Updating home page

--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Sebastian N. Brown"
   avatar           : "SchoolHeadshotCropped.jpg"
-  bio              : "PhD Student and Applied Behavioral Labor Economist"
+  bio              : "PhD Candidate and Labor Economist"
   location         : "Goleta, California"
   employer         : "UC Santa Barbara"
   pubmed           :
