Update about page

--- a/_config.yml
+++ b/_config.yml
@@ -82,8 +82,8 @@ analytics:
 author:
   name             : "Sebastian N. Brown"
   avatar           : "SchoolHeadshotCropped.jpg"
-  bio              : "PhD Candidate and Labor Economist"
-  location         : "Goleta, California"
+  bio              : "Labor Economist"
+  location         : "Fairfield, California"
   employer         : "UC Santa Barbara"
   pubmed           :
   googlescholar    :
